After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709369 - nmcli: fix some leaks found by valgrind
nmcli: fix some leaks found by valgrind
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nmcli
unspecified
Other All
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-10-03 14:09 UTC by Dan Winship
Modified: 2013-10-24 02:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nmcli: fix some leaks found by valgrind (2.96 KB, patch)
2013-10-03 14:09 UTC, Dan Winship
none Details | Review
[PATCH] fixup for the original patch (2.41 KB, patch)
2013-10-23 12:25 UTC, Jiri Klimes
none Details | Review
[PATCH] do not pass con_type to the activate_connection_cb() callback (3.84 KB, patch)
2013-10-23 12:27 UTC, Jiri Klimes
none Details | Review

Description Dan Winship 2013-10-03 14:09:26 UTC
See patch. In particular, note the FIXME, because I'm not quite sure
what to do there.
Comment 1 Dan Winship 2013-10-03 14:09:28 UTC
Created attachment 256391 [details] [review]
nmcli: fix some leaks found by valgrind
Comment 2 Jiri Klimes 2013-10-23 12:24:20 UTC
Thanks, it looks good except:
- the FIXME chunk is needed, but only belongs to (argc==0) branch
- missing g_free (info->con_type); in master_iface_slaves_check()

Fixed in fixup! commit attached in comment #3

Also simplified the con_type handling, it's actually not needed - comment #4
Comment 3 Jiri Klimes 2013-10-23 12:25:37 UTC
Created attachment 257910 [details] [review]
[PATCH] fixup for the original patch

Fixup for the original patch.
Comment 4 Jiri Klimes 2013-10-23 12:27:47 UTC
Created attachment 257911 [details] [review]
[PATCH] do not pass con_type to the activate_connection_cb() callback

We don't actually need the connection type in activate_connection_cb() callback, simplify the code.
Comment 5 Dan Winship 2013-10-24 02:24:13 UTC
squashed your fixup and committed both patches