nmcli: fix some leaks found by valgrind

https://bugzilla.gnome.org/show_bug.cgi?id=709369